# flow4df

./: .buildinfo  .gitignore  LICENSE  README.md  classes.dot  classes.html  genindex.html  index.html  install  install_local  objects.inv  pyproject.toml  run_tests  run_tests_slow  search.html  searchindex.js  tldr.html
_sources/: index.rst.txt
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/source/: conf.py  index.rst  tldr.rst
flow4df/: __init__.py  column_stats.py  constraint.py  data_interval.py  enums.py  partition_spec.py  schema.py  table.py  table_identifier.py  table_index.py  table_stats.py  trigger.py  type_annotations.py  types.py
flow4df/example/catalog1/: __init__.py
flow4df/example/catalog1/bronze/: agf_hourly_row_count_v1.py
flow4df/example/catalog1/schema1/: fct_raw_event_x_v1.py  fct_table_x_v1.py
flow4df/example/catalog1/schema2/: fct_event_x_v1.py
flow4df/example_dwh/: __init__.py
flow4df/example_dwh/catalog1/: __init__.py
flow4df/example_dwh/catalog1/bronze/: agf_hourly_row_count_v1.py  (+2 more)
flow4df/misc/: application_arguments.py  entry_point.py  entry_point_main.py
flow4df/storage/: local_storage.py  s3_storage.py  storage.py
flow4df/table_format/: delta_table_format.py  iceberg_table_format.py  table_format.py
flow4df/tools/: __init__.py  cicd.py  module.py  schema.py  sqlexpr.py
flow4df/transformation/: batch_transformation.py  foreachbatch_streaming.py  generic_transformation.py  incremental_batch_transformation.py  structured_streaming.py
src/flow4df/: __init__.py  common.py  data_interval.py  merge_utils.py  partitioning.py  session_property.py  table_identifier.py  table_node.py  testing.py  upstream_storages.py  utils.py
src/flow4df/cases/: __init__.py
src/flow4df/storage/: __init__.py  delta_storage.py  storage.py
src/flow4df/storage_backend/: __init__.py  local_storage_backend.py  s3_storage_backend.py  storage_backend.py
src/flow4df/transformation/: __init__.py  batch_transformation.py  foreachbatch_streaming.py  generic_transformation.py  structured_streaming.py  transformation.py
tests/: conftest.py  test_data_interval.py  test_partition_spec.py  test_rmb_streaming_table.py  test_table_identifier.py  test_unit_test_table.py
tests/cases/: test_dummydb.py
tests/misc/: test_application_arguments.py
tests/storage/: test_delta_storage.py  test_local_storage.py  test_s3_storage.py
tests/storage_backend/: test_local_storage_backend.py  test_s3_storage_backend.py
tests/table_format/: test_delta_init_table.py  test_delta_maintenance.py  test_delta_maintenance_1.py  test_delta_table_format.py
tests/tools/: test_list_modules.py  test_schema.py  test_sqlexpr.py
tests/transformation/: test_batch_transformation.py  test_foreachbatch_transformation.py  test_generic_transformation.py  test_incremental_transformation.py  test_structured_streaming.py
(+18 files in other folders)
