# https://flit.pypa.io/en/stable/pyproject_toml.html#pyproject-project-dependencies
[build-system]
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "flow4df"
version = "1.0.0"
authors = [
  { name="Boyan Georgiev", email="todo@gmail.com" },
]
description = "My dscription"
readme = "README.md"
requires-python = ">=3.11,<4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "pyspark~=3.5",
    "setuptools",
]

[project.optional-dependencies]
delta = [
    "delta-spark==3.*"
]
dev = [
    "pytest>=7.4.3",
]
# doc = [
#     "sphinx>=7.3.0",
# ]
emacs = [
    "ipython",
    "pyright[nodejs]==1.1.382",
    "setuptools",
    "pip",
    "flake8",
]

[project.urls]
Documentation = "https://TODO"
Source = "https://TODO"


[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow `pytest -m \"not slow\"`",
]